<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="Refresh"
        android:showAsAction="always"/>
    <item android:id="@+id/home"
        android:title="@string/home"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/apply"
          android:title="@string/apply"
          android:showAsAction="never"/>
    <item android:id="@+id/youtube"
          android:title="@string/youtube"
          android:showAsAction="never"/>
    <item android:id="@+id/steam"
          android:title="@string/steam"
          android:showAsAction="never"/>
    <item android:id="@+id/about"
          android:title="@string/about"
          android:showAsAction="never"/>
</menu>
